--- a/doc/README
+++ b/doc/README
@@ -1,3 +1,5 @@
+NB: NOT UP TO DATE !!! CHECK THE SOURCE CODE
+
 The directory contains the Adaptive search manual. The source is availabe
 and also various versions: PostScript, PDF, HTML.
 
